--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,11 @@
 {% block content %}
 {{ super() }}
 <p>main page</p>
+
+<h2>Список статей:</h2>
+<ul>
+{% for p in posts %}
+<li><a href="{{ url_for('showPost', id_post=p.id)}}">{{p.title}}</a></li>
+{% endfor %}
+</ul>
 {% endblock %}
