--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto';
+    /* color: white; */
+}
+
+a {
+    text-decoration: none;
+}
+
 body {
-    background-color: aqua;
+    background-color: silver;
 }
 
 .success {
@@ -8,4 +20,62 @@ body {
 
 .error {
     color: red;
+}
+
+header {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+}
+.header__wrapper {
+    width: 82%;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu {
+    font-size: 16px;
+    color: black;
+}
+
+
+
+.menu__list {
+    display: flex;
+    list-style: none;
+}
+
+.menu__list__item {
+    margin-right: 62px;
+    color: black;
+}
+
+.buttons__regist {
+    display: flex;
+    align-items: center;
+    
+}
+
+.regist {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* position: relative; */
+    top: 50%;
+    left: 50%;
+    width: 154px;
+    height: 30px;
+    border: none;
+    background: #FF7A7A;
+    color: white;
+    border-radius: 5px;
+    margin-right: 25px;
+    font-size: 16px;
+}
+
+.enter {
+    font-size: 16px;
+    color: #FF7A7A;
 }
