--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
             </nav>
         
             <div class="buttons__regist">
-                <a class="regist" href="###">Регистрация</a>
+                <a class="regist" href="/registration">Регистрация</a>
                 <a href="###" class="enter">Вход</a>
             </div>
         </header>
