--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-
+{% block title %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/regist.css')}}">
+{% endblock %}
 {% block content %}
 {{ super() }}
 {% for cat, msg in get_flashed_messages(True) %}
