--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
             <nav class="menu">
                 <ul class="menu__list">
-                    <a href="{{url_for('addPost')}}" class="menu__list__item""><li>Новости</li></a>
+                    <a href="/" class="menu__list__item""><li>Новости</li></a>
                     <a href="{{url_for('addPost')}}" class="menu__list__item""><li>Категории</li></a>
                     <a href="{{url_for('addPost')}}" class="menu__list__item""><li>Самое интересное</li></a>
                 </ul>
