--- a/templates/post.html
+++ b/templates/post.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 {{ super() }}
+<h1>{{ title }}</h1>
 {{ post | safe }}
+{{ likes }}
+
+{% for message in get_flashed_messages() %}
+	<div class="alert">{{ message }}</div>
+{% endfor %}
+
+<form method="POST" action="">
+    <input type="submit" value="Оставить лайк">
+</form>
 {% endblock %}
