--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         
             <div class="buttons__regist">
                 <a class="regist" href="/registration">Регистрация</a>
-                <a href="###" class="enter">Вход</a>
+                <a href="/login" class="enter">Вход</a>
             </div>
         </header>
         </div>
