--- a/templates/registration.html
+++ b/templates/registration.html
@@ -9,7 +9,10 @@
 <h1 class="{{cat}}">{{msg}}</h1>
 {% endfor %}
 <form action="/registration" method="POST">
-    <input type="text" name="username" placeholder="Введите имя" required>
+    <input type="text" name="name" placeholder="Введите имя" required>
+    <input type="email" name="email" placeholder="email">
+    <input type="password" name="password" placeholder="password">
+    <input type="password" name="password_two" placeholder="password">
     <input type="submit" value="Отправить">
 </form>
 <h1>USERS:</h1>
