--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,12 @@ a {
     text-decoration: none;
 }
 
+img {
+    width: 50px;
+    height: 50px;
+    background-color: #FF7A7A;
+}
+
 body {
     background-color: silver;
 }
